Create x class to display x mark on the board

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 :root {
     --cell-size: 100px;
-    --mark-size: calc(var(var(--cell-size)) * .9);
+    --mark-size: calc(var(--cell-size) * .9);
 }
 
 body {
@@ -24,6 +24,10 @@ body {
     width: var(--cell-size);
     height: var(--cell-size);
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .cell:first-child,
@@ -40,8 +44,25 @@ body {
     border-right: none;
 }
 
-.cell:last-child,
-.cell:nth-child(7),
-.cell:nth-child(8) {
+.cell:nth-child(9),
+.cell:nth-child(8),
+.cell:nth-child(7) {
     border-bottom: none;
+}
+
+.cell.x::before,
+.cell.x::after {
+    position: absolute;
+    content: '';
+    width: calc(var(--mark-size) * .15);
+    height: var(--mark-size);
+    background-color: black;
+}
+
+.cell.x::before {
+    transform: rotate(45deg);
+}
+
+.cell.x::after {
+    transform: rotate(-45deg);
 }
