--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
     border-right: none;
 }
 
+/* .cell:last-child not working in live server */
 .cell:nth-child(9),
 .cell:nth-child(8),
 .cell:nth-child(7) {
@@ -57,12 +58,14 @@ body {
 }
 
 .cell.x::before,
-.cell.x::after {
+.cell.x::after,
+.cell.circle::before {
     background-color: black;
 }
 
 .board.x .cell:not(.x):not(.circle):hover::before,
-.board.x .cell:not(.x):not(.circle):hover::after {
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before {
     background-color: lightgrey;
 }
 
@@ -88,19 +91,22 @@ body {
 }
 
 .cell.circle::before,
-.cell.circle::after {
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after  {
     position: absolute;
     content: '';
     border-radius: 50%;
-    background-color: black;
 }
 
-.cell.circle::before {
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before  {
     width: var(--mark-size);
     height: var(--mark-size);
 }
 
-.cell.circle::after {
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after {
     width: calc(var(--mark-size) * .7);
     height: calc(var(--mark-size) * .7);
     background-color: white;
