Change body background and cell pad color

--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,19 @@
 
 :root {
     --cell-size: 100px;
-    --mark-size: calc(var(--cell-size) * .9);
+    --mark-size: calc(var(--cell-size) * .6);
 }
 
 body {
     margin: 0;
+    background-color: #FCB1A6;
 }
 
 .board {
     width: 100vw;
     height: 100vh;
     display: grid;
+    gap: 10px;
     justify-content: center;
     align-content: center;
     grid-template-columns: repeat(3, auto);
@@ -24,14 +26,16 @@ body {
 .cell {
     width: var(--cell-size);
     height: var(--cell-size);
-    border: 1px solid black;
     display: flex;
+    background-color: #FFF9EC;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
     position: relative;
     cursor: pointer;
 }
 
+/*
 .cell:first-child,
 .cell:nth-child(2),
 .cell:nth-child(3) {
@@ -45,14 +49,15 @@ body {
 .cell:nth-child(3n + 3) {
     border-right: none;
 }
-
+*/
 /* .cell:last-child not working in live server */
+/*
 .cell:nth-child(9),
 .cell:nth-child(8),
 .cell:nth-child(7) {
     border-bottom: none;
 }
-
+*/
 .cell.x, .cell.circle {
     cursor: not-allowed;
 }
@@ -60,13 +65,13 @@ body {
 .cell.x::before,
 .cell.x::after,
 .cell.circle::before {
-    background-color: black;
+    background-color: #5D2A42;
 }
 
 .board.x .cell:not(.x):not(.circle):hover::before,
 .board.x .cell:not(.x):not(.circle):hover::after,
 .board.circle .cell:not(.x):not(.circle):hover::before {
-    background-color: lightgrey;
+    background-color: #FB6376;
 }
 
 .cell.x::before,
@@ -109,7 +114,7 @@ body {
 .board.circle .cell:not(.x):not(.circle):hover::after {
     width: calc(var(--mark-size) * .7);
     height: calc(var(--mark-size) * .7);
-    background-color: white;
+    background-color: #FFF9EC;
 }
 
 .winning-message {
